2007-06-14  Ankit Jain  <jankit@novell.com>

	* MakefileData.cs (PkgManagerTable): New. A global table to keep weak
	references to ConfiguredPackagesManager objects.
	(UpdateProject): Use the new PkgManagerTable.
	(ConfiguredPackagesManager.LastWriteTime): New.

2007-06-07  Ankit Jain  <jankit@novell.com>

	* AutotoolsContext.cs (NormalizeRelativePath): Moved to Runtime.FileService .
	Track api change.
	* SimpleProjectMakefileHandler.cs: Track api change.
	* SolutionDeployer.cs: Track api change.

2007-05-31  Ankit Jain  <jankit@novell.com>

	* SimpleProjectMakefileHandler.cs: Comment out all .pc file generation
	related code. It is handled by the deployment infrastructure.
	* SolutionDeployer.cs (GenerateFiles): Remove code related to .pc file
	generation.

	SolutionOptionsPanel.cs is not used now.
	* Makefile.am: Remove SolutionOptionsPanel.cs from the list of files.
	* MonoDevelop.Autotools.mdp: Likewise
	* MonoDevelop.Autotools.addin.xml: Remove extensions related to
	SolutionOptionsPanel.

2007-05-29  Ankit Jain  <jankit@novell.com>

	* SimpleProjectMakefileHandler.cs (Deploy): GetDeployFiles can return
	duplicates, ignore them. Update code for change in GetProjectConfig.
	(GetProjectConfig): Look for project's config in ParentCombine's
	configs.

2007-05-29  Ankit Jain  <jankit@novell.com>

	* SimpleProjectMakefileHandler.cs (Deploy): Enumerate solution level
	configs, and use the corresponding project config for emitting Makefile.am
	(GetProjectConfig): New.
	* AutotoolsContext.cs (EscapeStringForAutoconf): Escape '|' .

2007-05-28  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Autotools.mdp,
	  gtk-gui/MonoDevelop.Autotools.TarballBuilderEditorWidget.cs,
	  gtk-gui/MonoDevelop.Autotools.MakefileOptionPanelWidget.cs,
	  gtk-gui/gui.stetic: Updated.
	* Handler.cs: Report an error when the project can't be exported. This
	  fixes bug #81755.
	* TarballBuilderEditorWidget.cs: Make it work when the selected root
	  entry is not a combine.
